--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -32,6 +32,19 @@
   transition: transform 0.3s ease;
 }
 
+.gallery-item {
+  width: calc((100% - 48px) / 3);
+  box-sizing: border-box;
+  max-height: 200px;
+  max-width: 320px;
+}
+
+.gallery-image {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
 .gallery-image:hover,
 .gallery-image:active {
   transform: scale(1.04);
@@ -40,12 +53,66 @@
 .feedback-form {
   display: flex;
   flex-direction: column;
-  gap: 24px;
+  gap: 8px;
   justify-content: center;
-  align-items: center;
+  align-items: start;
+  margin: 0 auto;
+  max-width: 360px;
 }
 
-.feedback-form button {
-  width: 200px;
-  margin: auto;
+button {
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 95px;
+  height: 40px;
+  margin-top: 16px;
+  background-color: #4e75ff;
+  color: #fff;
+  box-shadow: none;
+  border-color: transparent;
+}
+
+button:hover {
+  background-color: #6c8cff;
+}
+
+.feedback-form label {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 8px;
+}
+
+input {
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 360px;
+  height: 40px;
+  padding-top: 8px;
+  padding-left: 16px;
+  padding-bottom: 8px;
+  box-sizing: border-box;
+  outline: transparent;
+}
+textarea {
+  resize: none;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 360px;
+  height: 80px;
+  padding-top: 8px;
+  padding-left: 16px;
+  padding-bottom: 8px;
+  box-sizing: border-box;
+  outline: transparent;
+}
+
+input:hover {
+  border: 1px solid black;
+  border-radius: 4px;
+}
+
+textarea:hover {
+  border: 1px solid black;
+  border-radius: 4px;
 }
